# momem

./: .gitignore  CLAUDE.md  LICENSE  RATIONALE.md  README.md  pyproject.toml  report.md
docs/: DESIGN.md  PLAN.md  RATIONALE.md  review_report.md  session-2026-03-10-1049.md
momem/: __main__.py  cli.py  codebase.py  deps.py  project.py
momemcli/: __main__.py  cli.py  codebase.py  config.py  deps.py  project.py
tests/: conftest.py  test_cli.py  test_codebase.py  test_config.py  test_deps.py  test_project.py
